SIL: Redo DynamicSelfType lowering

Fixes <https://bugs.swift.org/browse/SR-9429>, <rdar://problem/32288771>,
<https://bugs.swift.org/browse/SR-9430>, <rdar://problem/46982573>.